# mickey-scheme

./: .gitignore  AUTHOR  AUTHORS  INSTALL  LICENSE  Makefile  Makefile.am  README.md  TODO  TODO-LATER  autogen.sh  build-debug.sh  build-release.sh  configure.ac  index.html  make-library-m4.py  params.json
bugs/: README  bug1.scm  bug2.scm  bug3.scm  bug4.scm  bug8.scm  macro-library-bug.txt
docs/: BENCHMARKS  IDEAS  R4RS-TEST  SCHEMES
examples/: compliance-r7rs.scm  lisp-fortune.scm  mandelbrot.scm  repl.scm  test-signal.scm
experimental/: eval-cc1.scm  eval-cc2.scm
future/: call-cc1.scm  cps-aim379.scm  define-record-type.scm  integrate-system.scm  macro3.scm  record.scm  show-r7rs-support.scm
future/sdl/: mickey-sdl.cpp  test-sdl.scm
include/: apply.h  arguments.h  assertions.h  backtrace.h  bytevector_t.h  circular.h  cond-expand.h  cons.h  continuation_t.h  core-transition.h  debug.h  decimal_t.h  dict_t.h  eval.h  evlis.h  exceptions.h  features.h  file-io.h  heap.h  import.h  mickey.h  module_import.h  options.h  parser.h  platform-limits.h  pointer_t.h  primitives.h  print.h  repl.h  strings.h  syntax-rules.h  system-features.h  tokenizer.h  types.h  util.h  vector_t.h
include/libraries/: mickey-misc.h  unix-dlopen.h
include/mickey/: apply.h  arguments.h  assertions.h  backtrace.h  circular.h  cond-expand.h  cons.h  core-transition.h  debug.h  eval.h  evlis.h  exceptions.h  file-io.h  garbage-collector.h  import.h  library.h  mickey.h  options.h  parser.h  platform-limits.h  primitives.h  print.h  repl.h  syntax-rules.h  system-features.h  tokenizer.h  util.h
include/mickey/types/: closure_t.h  dict_t.h  environment_t.h  integer_t.h  number_t.h  rational_t.h  real_t.h  symbol_t.h  type_t.h
include/type/: character_t.h  closure_t.h  dict_t.h  environment_t.h  lambda_t.h  type_t.h
include/types/: bytevector_t.h  dict_t.h  integer_t.h  number_t.h  port_t.h  radix_t.h  rational_t.h  real_t.h  syntax_t.h  type_t.h
lib/: README  index.scm
lib/c/: stdio.scm
lib/cross-platform/: sdl.scm
lib/examples/: lisp-quotes.scm
lib/experimental/: endianness.scm  eval-with-continuation.scm  unit-testing.scm
lib/implementation/: base.scm  version.scm
lib/maclisp/: maclisp.scm
lib/mickey/: environment.scm  features.scm  internals.scm  library.scm  misc.scm
lib/optional/: Makefile
lib/portable/: atom.scm  atom?.scm  boolean-logic.scm  booleans.scm  flatten.scm  gensym.scm  print.scm  prng-lcg.scm  sequence.scm
lib/posix/: exit.scm  fork.scm  kill.scm  signal.scm  sysconf.scm  time.scm  uname.scm  unistd.scm  wait.scm
lib/prng/: lcg.scm
lib/scheme/: base.scm  case-lambda.scm  char.scm  complex.scm  cxr.scm  eval.scm  file.scm  inexact.scm  inquiry.scm  lazy.scm  load.scm  math.scm  process-context.scm  r5rs.scm  read.scm  repl.scm  time.scm  write.scm
lib/scheme-experimental/: unit-testing.scm
lib/srfi/: srfi-0.scm  srfi-1-reference.scm  srfi-1.scm  srfi-112.scm  srfi-16.scm  srfi-4.scm  srfi-8.scm  srfi-98.scm
lib/test/: unit-test.scm
lib/unix/: exit.scm  fork.scm  kill.scm  signal.scm  time.scm  uname.scm  unistd.scm  wait.scm
src/: Makefile  Makefile.am  apply.cpp  arguments.cpp  assertions.cpp  backtrace.cpp  block-comment.test  call-lambda.cpp  circular.cpp  cond-expand.cpp  cons.cpp  core-transition.cpp  environment.cpp  eval.cpp  evlis.cpp  exceptions.cpp  features.cpp  file-io.cpp  garbage-collector.cpp  heap.cpp  import.cpp  make-closure.cpp  mickey-internals.cpp  mickey.cpp  module_import.cpp  options.cpp  parse-string.cpp  parser-converters.cpp  parser-predicates.cpp  parser.cpp  posix-dlopen.cpp  posix-fork.cpp  posix-signal.cpp  posix-sysconf.cpp  posix-uname.cpp  primitives.cpp  print.cpp  rational_t.cpp  real_t.cpp  repl.cpp  (+12 more)
src/libraries/: mickey-environment.cpp  mickey-internals.cpp  mickey-misc.cpp  scheme-base.cpp  scheme-math.cpp  scheme-process-context.cpp  scheme-repl.cpp  scheme-write.cpp  unix-dlopen.cpp  unix-uname.cpp
test/: begin.scm  bytevector1.scm  celsius-fahrenheit.scm  chess.scm  complex.scm  defmacro-1.scm  emptylist-1.scm  fact-tail.scm  fib.scm  implicit-define.scm  lambda-begin.scm  less-equal.scm  let.scm  local-fun.scm  macro2.scm  macro4.scm  mandelbrot.scm  map2.scm  math.scm  named-let.scm  record-2.scm  rest-lambda.scm  run-all  sicp-tests.scm  srfi-112-example.scm  test-apply.scm  test-case-lambda-0.scm  test-case-lambda-1.scm  test-cond-mm.scm  test-cond.scm  test-do.scm  test-force.scm  test-fork.scm  test-let.scm  test-lexical-scoping-2.scm  test-lexical-scoping.scm  test-maclisp.scm  test-syntax-rest-args.scm  test.scm  tests.scm  (+3 more)
test/breaks-mickey/: chibi-r7rs-tests.scm  multi-circular.scm  r4rstest.scm
tests/: begin.scm  block-comment.expected  block-comment.scm  bugs-known.scm  bugs-regression.scm  bugs.scm  bytevector.scm  celsius-fahrenheit.scm  fibonacci.scm  hofstadter-seq.scm  let-fxy.scm  scheme-base.scm  scheme-char.scm  scheme-inexact.scm  scheme-load.scm  spaced-symbols.scm  tail-call-elimination.scm  test-scheme-base.scm  test-scheme-char.scm  test-scheme-cxr.scm  test-scheme-inexact.scm  test-scheme-load.scm  tests.scm  vector.scm
tests/breaks-mickey/: call-cc-1.scm  call-cc-2.scm  chibi-r7rs-tests.scm
tests/misc/: block-comment.scm  case1.scm  celsius-fahrenheit.scm  combinators.scm  curry.scm  debug.scm  emptylist-1.scm  fact.scm  hello.scm  hofstaedter-male-female.scm  import-bug.scm  lambda-lambda.scm  lambda.scm  let-fxy.scm  loop1.scm  macro1.scm  mandelbrot.scm  map1.scm  prng.scm  record-1.scm  rest.scm  sicp-tests.scm  spaced-symbol.scm  strings.scm  syntax-rules-01.scm  test-call-with-values.scm  test-case.scm  test-closure-1.scm  test-cond-expand.scm  test-cond2.scm  test-dot-notation.scm  test-environ.scm  test-for-each.scm  test-import-01.scm  test-import-02.scm  test-import-03.scm  test-import-04.scm  test-import-rename.scm  test-let-2.scm  test-let-star.scm  (+7 more)
tests/programs/: bytevector.scm  celsius-fahrenheit.scm  fibonacci.scm  hofstadter-seq.scm  let-fxy.scm  tail-call-elimination.scm
text/: BENCHMARKS  IDEAS  LETs  R7RS  SCHEMES
(+34 files in other folders)
