ACLOCAL_AMFLAGS=-I m4 --install
EXTRA_DIST = autogen.sh lib include tests m4/.dummy
SUBDIRS = src

pkginclude_HEADERS = \
										 include/mickey/apply.h \
										 include/mickey/arguments.h \
										 include/mickey/assertions.h \
										 include/mickey/backtrace.h \
										 include/mickey/circular.h \
										 include/mickey/cons.h \
										 include/mickey/debug.h \
										 include/mickey/eval.h \
										 include/mickey/evlis.h \
										 include/mickey/exceptions.h \
										 include/mickey/file-io.h \
										 include/mickey/import.h \
										 include/mickey/mickey.h \
										 include/mickey/options.h \
										 include/mickey/parser.h \
										 include/mickey/primitives.h \
										 include/mickey/print.h \
										 include/mickey/syntax-rules.h \
										 include/mickey/tokenizer.h \
										 include/mickey/util.h

include library.m4
